--- a/01.intro-to-react.md
+++ b/01.intro-to-react.md
@@ -4,4 +4,5 @@
 ### 1.安装 Homebrew
 Homebrew 是 macOS 下的基于命令行的软件包管理器，可以简单的理解为非图形化但是异常强大的软件包下载工具。
 Homebrew 本身的安装也是要通过命令行来完成的，在终端 Terminal 里输入官方提供的命令即可：
-> /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+
+```/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"```
