--- a/01.intro-to-react.md
+++ b/01.intro-to-react.md
@@ -3,6 +3,10 @@
 
 ### 1.安装 Homebrew
 Homebrew 是 macOS 下的基于命令行的软件包管理器，可以简单的理解为非图形化但是异常强大的软件包下载工具。
-Homebrew 本身的安装也是要通过命令行来完成的，在终端 Terminal 里输入官方提供的命令即可：
+Homebrew 本身的安装也是要通过命令行来完成的，在终端 Terminal 里输入官方提供的命令即可，过程中需要输入密码，输入完回车可以完成安装：
 
 ```/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"```
+
+如果安装失败可能是某些文件由于网络问题，国内获取受限导致的，可以通过更换为下面的命令行重新下载，来源于[知乎](https://www.zhihu.com/question/35928898)
+
+```/bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"```
