02-build-basic-css

--- a/01.intro-to-react.md
+++ b/01.intro-to-react.md
@@ -2,7 +2,7 @@
 
 开发环境搭建
 
-### 1.安装 Homebrew
+## 1.安装 Homebrew
 
 Homebrew 是 macOS 下的基于命令行的软件包管理器，可以简单的理解为非图形化但是异常强大的软件包下载工具。
 Homebrew 本身的安装也是要通过命令行来完成的，在终端 Terminal 里输入以下命令即可，过程中需要输入密码，输入完回车可以完成安装：
@@ -13,7 +13,7 @@ Homebrew 本身的安装也是要通过命令行来完成的，在终端 Termina
 
 `/bin/zsh -c "$(curl -fsSL https://gitee.com/cunkai/HomebrewCN/raw/master/Homebrew.sh)"`
 
-### 2.通过 Homebrew 安装 Node
+## 2.通过 Homebrew 安装 Node
 
 Node 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，一个让 JavaScript 运行在服务端的开发平台。学习 React 要安装 Node，用于 React 开发和模块管理的主流工具 Webpack 必须在 Node 的环境下执行。安装 Node 时会附赠一个包管理工具 Node Package Manager，即 npm。
 命令行如下：
@@ -22,7 +22,7 @@ Node 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，一个让 Jav
 
 如果安装不成功可以尝试[官网](https://nodejs.org/en/)下载安装。
 
-### 3.通过 npm 安装 gatsby-cli
+## 3.通过 npm 安装 gatsby-cli
 
 命令行如下：
 
@@ -37,7 +37,7 @@ Node 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，一个让 Jav
 
 `sudo npm install -g gatsby-cli`
 
-### 4.通过 gatsby 创建项目
+## 4.通过 gatsby 创建项目
 
 通过命令行打开想创建项目的文件路径，比如想把项目放在 Documents 下，命令行示例如下：
 
@@ -49,7 +49,7 @@ Node 是一个基于 Chrome V8 引擎的 JavaScript 运行环境，一个让 Jav
 
 my-app 是可以自己定义的项目名称。
 
-### 5.通过 gatsby 运行项目
+## 5.通过 gatsby 运行项目
 
 打开想要运行的项目的文件路径，命令行示例如下：
 
@@ -61,7 +61,7 @@ my-app 是可以自己定义的项目名称。
 
 运行成功之后，在浏览器输入 localhost:8000 就能看到 gatsby 框架生成的默认网页了，如果此时把终端关闭，那网页就会打开失败，因为运行环境是由终端在执行的。
 
-### 6.补充
+## 6.补充
 
 - mengto 介绍了把项目上传到 Github 来同步代码，如果是只有一个本地环境来和 GitHub 同步，问题不大，但多个本地环境和同一个 GitHub 项目同步，我实践的过程中遇到了一些问题
 
@@ -69,7 +69,7 @@ my-app 是可以自己定义的项目名称。
 
 - 我在跟着 mengto 的教程学 React 的过程中，感受到除了这门语言本身的学习，还需要对 GitHub、VS Code、Terminal 比较熟悉，当然这也是开发人员必备的的。
 
-### 7.推荐文章
+## 7.推荐文章
 
 - [程序员 Homebrew 使用指北](https://sspai.com/post/56009#toc_22)
 - [Gatsby.js 中文教程](https://www.gatsbyjs.cn/tutorial/)
