--- a/02.BasicStylinginCSS.md
+++ b/02.BasicStylinginCSS.md
@@ -37,12 +37,12 @@ background-size:cover;
 
 #### 1.今天频繁的遇到 package.json 文件报警，但不知道什么原因
 
-<font color=#008722>**解决：**</font>打开 VS Code 的 setting.json 文件，添加以下代码，保存即可解决
+**解决：** 打开 VS Code 的 setting.json 文件，添加以下代码，保存即可解决
 
 ` "http.proxyAuthorization": "false"`
 
 #### 2.GitHub 上的同一个 gatsby 项目在不同电脑上 coding 遇到的缺少依赖无法运行项目的问题
 
-<font color=#008722>**解决：**</font>在缺少依赖的项目终端下运行以下代码补充依赖，即可解决
+**解决：** 在缺少依赖的项目终端下运行以下代码补充依赖，即可解决
 
 `npm install`
